feat: EsimCard, auto-topup UI, saved payment methods, PaymentFlow overhaul, PaymentMethods page
## New Components

### src/components/esim/EsimCard.jsx (NEW)
- Dedicated eSIM card replacing OrderCard+myesim prop pattern
- Auto-topup bolt icon (green) shown when auto_topup_enabled
- Inline edit label button; consumption/QR/topup/label-change modals
- isEnablingAutoTopup prop for loading state while enabling
- Integrates AutoTopupModal for settings management from eSIM card
- Responsive chips (xs/sm sizing), table with transaction history

### src/components/auto-topup/AutoTopupCheckoutOption.jsx (NEW)
- Checkout checkbox to opt into auto-topup when buying a top-up bundle
- Shows linked bundle preview (name, data, validity, price per top-up)
- onAutoTopupChange(enabled, monthlyCap) callback
- Only renders when bundleData + iccid provided (top-up purchase context)

### src/components/auto-topup/AutoTopupModal.jsx (NEW)
- Full modal for managing auto-topup settings from EsimCard
- Toggle enable/disable with disable confirmation dialog
- Fetches existing config; shows linked plan details; status/trigger point display
- enableMutation / disableMutation / updateMutation via React Query

### src/components/auto-topup/AutoTopupPrompt.jsx (NEW)
- Lightweight inline enable/disable switch shown in OrderPopup after purchase
- Only rendered for new bundle purchases that are not unlimited (not top-ups)
- Loading indicator; calls enableAutoTopup/disableAutoTopup APIs

### src/components/payment/SavedPaymentMethodSelector.jsx (NEW)
- Payment method selector for checkout flow
- Wallet option with balance display + insufficient funds warning
- Saved cards: default first, 1 shown initially with Load more toggle
- Expired cards shown with strikethrough + Expired chip (disabled, cannot be selected)
- 'Add new card' / 'Pay with card' option always last
- i18n: payment.wallet, payment.insufficientBalance, payment.loadMoreCards, payment.showLessCards

### src/pages/payment-methods/PaymentMe

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -49,6 +49,8 @@
     "view_receipt": "Beleg ansehen",
     "download": "Herunterladen",
     "view_more": "Mehr anzeigen",
+    "view_details": "Details anzeigen",
+    "details": "Details",
     "delete": "Löschen",
     "add_top_up": "Aufladung hinzufügen",
     "consumption": "Verbrauch",
@@ -151,7 +153,8 @@
     "accountInfo": "Kontoinformationen",
     "deleteAccount": "Konto löschen",
     "logout": "Abmelden",
-    "referAndEarn": "Empfehlen & Verdienen"
+    "referAndEarn": "Empfehlen & Verdienen",
+    "paymentMethods": "Zahlungsmethoden"
   },
   "referral": {
     "discountActive": "🎉 Empfehlungsrabatt aktiv!",
@@ -446,7 +449,8 @@
     "paymentConfirmationFailed": "Zahlungsbestätigung fehlgeschlagen",
     "paymentMethod": "Zahlungsmethode",
     "failedToLoadPaymentInputs": "Zahlungseingaben konnten nicht geladen werden. Bitte später erneut versuchen",
-    "securityDisclaimer": "Zahlungen werden sicher über Stripe.com verarbeitet. ChillSim speichert keine Kartendaten."
+    "securityDisclaimer": "Zahlungen werden sicher über Stripe.com verarbeitet. Ihre Zahlungsmethode wird sicher von Stripe für zukünftige Nutzung gespeichert.",
+    "savePaymentNotice": "Ihre Zahlungsmethode wird sicher für zukünftige Einkäufe und automatische Aufladungen gespeichert."
   },
   "planType": {
     "Data only": "Nur Daten"
@@ -521,9 +525,21 @@
   "payment": {
     "paymentTypeNotAvailable": "Diese Zahlungsart ist derzeit nicht verfügbar",
     "failedToLoadPaymentInput": "Zahlungseingabe konnte nicht geladen werden",
+    "authenticationFailed": "Authentifizierung fehlgeschlagen. Bitte wählen Sie eine andere Zahlungsmethode und versuchen Sie es erneut.",
+    "failed": "Zahlung fehlgeschlagen",
     "paymentMethod": "Zahlungsmethode",
     "walletBalance": "Guthaben ({{balance}})",
-    "bundlePrice": "Tarifpreis"
+    "bundlePrice": "Tarifpreis",
+    "wallet": "Guthaben-Saldo",
+    "insufficientBalance": "Unzureichendes Guthaben für diesen Kauf",
+    "addNewCard": "Mit neuer Karte bezahlen",
+    "payWithCard": "Mit Karte bezahlen",
+    "savedPaymentMethods": "Gespeicherte Zahlungsmethoden",
+    "selectPaymentMethod": "Zahlungsmethode auswählen",
+    "processingPayment": "Zahlung wird verarbeitet",
+    "confirmingPayment": "Zahlung wird bestätigt...",
+    "loadMoreCards": "Mehr anzeigen",
+    "showLessCards": "Weniger Karten anzeigen"
   },
   "privacy": {
     "failedToLoadPrivacyPolicyData": "Datenschutzerklärung konnte nicht geladen werden",
@@ -1245,5 +1261,75 @@
       "title": "Willkommensangebot",
       "badge": "99% RABATT"
     }
+  },
+  "autoTopup": {
+    "promptTitle": "Automatische Aufladung aktivieren",
+    "promptDescription": "Nie wieder ohne Daten! Wenn dein Verbrauch 80% erreicht, laden wir automatisch mit {{bundle}} ({{data}}, {{validity}}) über deine gespeicherte Zahlungsmethode nach.",
+    "enableButton": "Automatische Aufladung aktivieren",
+    "enabling": "Wird aktiviert…",
+    "enabledSuccess": "Automatische Aufladung wurde aktiviert!",
+    "enabledConfirmation": "Automatische Aufladung ist aktiv für {{bundle}}. Wir laden automatisch nach, wenn der Verbrauch 80% erreicht.",
+    "enableError": "Automatische Aufladung konnte nicht aktiviert werden. Bitte versuche es erneut.",
+    "disableSuccess": "Automatische Aufladung wurde deaktiviert.",
+    "disableError": "Automatische Aufladung konnte nicht deaktiviert werden.",
+    "badge": "Auto-Aufladung",
+    "settingsTitle": "Einstellungen für automatische Aufladung",
+    "settingsDescription": "Automatisch aufladen, wenn der Datenverbrauch 80% erreicht.",
+    "enabled": "Aktiviert",
+    "disabled": "Deaktiviert",
+    "bundle": "Paket",
+    "paymentMethod": "Zahlungsmethode",
+    "monthlyCap": "Monatliches Ausgabelimit",
+    "monthlyCapHint": "Maximale monatliche Ausgaben für automatische Aufladung (in Cent).",
+    "noPaymentMethod": "Keine Zahlungsmethode gespeichert. Führe zuerst eine Kartenzahlung durch.",
+    "save": "Speichern",
+    "saving": "Wird gespeichert…",
+    "savedSuccess": "Einstellungen für automatische Aufladung gespeichert.",
+    "confirmDisable": "Automatische Aufladung für diese eSIM deaktivieren?",
+    "confirmDisableDescription": "Du kannst sie beim Checkout deines nächsten manuellen Aufladens erneut aktivieren.",
+    "yes": "Ja, deaktivieren",
+    "no": "Abbrechen",
+    "manageButton": "Auto-Aufladung verwalten",
+    "setupButton": "Auto-Aufladung einrichten",
+    "bundleAddedAutomatically": "Paket automatisch hinzugefügt",
+    "packageRestrictionWarning": "Wenn die automatische Aufladung aktiviert ist, können keine einzelnen Pakete hinzugefügt werden. Um ein anderes Paket auszuwählen, deaktivieren Sie bitte zuerst die automatische Aufladung.",
+    "monthlyCapHelp": "Tipp: Auf 0 setzen für unbegrenzte automatische Verlängerungen.",
+    "saveError": "Die Einstellungen für die automatische Aufladung konnten nicht gespeichert werden. Bitte versuchen Sie es erneut.",
+    "monthlyCapRequired": "Bitte geben Sie eine monatliche Ausgabenobergrenze ein (0 für unbegrenzt).",
+    "disable": "Auto-Aufladung deaktivieren",
+    "neverRunOutOfData": "Nie wieder ohne Daten",
+    "linkedTopUpPlan": "Verknüpfter Auflade-Plan",
+    "perTopUp": "Pro Aufladung",
+    "status": "Auto-Aufladung Status",
+    "active": "Aktiv",
+    "inactive": "Inaktiv",
+    "triggerPoint": "Auslösepunkt",
+    "at80Percent": "80% Verbrauch",
+    "saveChanges": "Änderungen speichern",
+    "iccidSerial": "ICCID (eSim Seriennummer)",
+    "enableAutoTopupCheckbox": "Automatisches Aufladen mit diesem Paket aktivieren",
+    "autoRechargeAt80": "Automatisches Aufladen bei 80% Verbrauch",
+    "enabledSuccessfully": "Automatisches Aufladen erfolgreich aktiviert!",
+    "enablementFailed": "Automatisches Aufladen konnte nach der Zahlung nicht aktiviert werden. Du kannst es bei deinem nächsten eSIM-Aufladekauf erneut versuchen."
+  },
+  "paymentMethods": {
+    "title": "Zahlungsmethoden",
+    "subtitle": "Verwalte deine gespeicherten Zahlungsmethoden.",
+    "default": "Standard",
+    "expired": "Abgelaufen",
+    "setDefault": "Als Standard festlegen",
+    "delete": "Löschen",
+    "noMethods": "Keine gespeicherten Zahlungsmethoden. Zahlungsmethoden werden automatisch gespeichert, wenn du eine Kartenzahlung durchführst.",
+    "confirmDelete": "Diese Zahlungsmethode löschen?",
+    "confirmDeleteDescription": "Bist du sicher, dass du diese Zahlungsmethode löschen möchtest?",
+    "confirmDeleteDefaultDescription": "Du kannst diese Zahlungsmethode nicht löschen, wenn die Auto-Aufladung aktiviert ist. Bitte deaktiviere zuerst die Auto-Aufladung oder lege eine andere Karte als Standard fest.",
+    "autoTopupRestrictionNote": "Die aktuelle Standardzahlungsmethode kann nicht gelöscht werden, solange die automatische Aufladung für eines Ihrer eSIM-Profile aktiviert ist.",
+    "deleteSuccess": "Zahlungsmethode gelöscht.",
+    "deleteError": "Zahlungsmethode konnte nicht gelöscht werden.",
+    "setDefaultSuccess": "Standard-Zahlungsmethode aktualisiert.",
+    "setDefaultError": "Standard-Zahlungsmethode konnte nicht aktualisiert werden.",
+    "expires": "Läuft ab",
+    "syncSuccess": "Zahlungsmethoden von Stripe synchronisiert.",
+    "syncError": "Zahlungsmethoden konnten nicht synchronisiert werden."
   }
 }
