--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -49,6 +49,8 @@
     "view_receipt": "View Receipt",
     "download": "Download",
     "view_more": "View More",
+    "view_details": "View details",
+    "details": "Details",
     "delete": "Delete",
     "add_top_up": "Add Top Up",
     "consumption": "Consumption",
@@ -151,7 +153,8 @@
     "accountInfo": "Account Info",
     "deleteAccount": "Delete Account",
     "logout": "Logout",
-    "referAndEarn": "Refer & Earn"
+    "referAndEarn": "Refer & Earn",
+    "paymentMethods": "Payment Methods"
   },
   "referral": {
     "discountActive": "🎉 Referral Discount Active!",
@@ -446,7 +449,8 @@
     "paymentConfirmationFailed": "Failed to confirm payment",
     "paymentMethod": "Payment Method",
     "failedToLoadPaymentInputs": "Failed to load payment inputs. Please try again later",
-    "securityDisclaimer": "Payments are securely processed via Stripe.com. ChillSim does not store your card details."
+    "securityDisclaimer": "Payments are securely processed via Stripe.com. Your payment method is saved securely by Stripe for future use.",
+    "savePaymentNotice": "Your payment method will be securely saved for future purchases and auto top-ups."
   },
   "planType": {
     "Data only": "Data only"
@@ -523,9 +527,21 @@
   "payment": {
     "paymentTypeNotAvailable": "This payment type is not available now",
     "failedToLoadPaymentInput": "Failed to load payment input",
+    "authenticationFailed": "Authentication failed. Please choose a different payment method and try again.",
+    "failed": "Payment failed",
     "paymentMethod": "Payment Method",
     "walletBalance": "Wallet ({{balance}})",
-    "bundlePrice": "Bundle Price"
+    "bundlePrice": "Bundle Price",
+    "wallet": "Wallet Balance",
+    "insufficientBalance": "Insufficient balance for this purchase",
+    "addNewCard": "Pay with new card",
+    "payWithCard": "Pay with card",
+    "savedPaymentMethods": "Saved Payment Methods",
+    "selectPaymentMethod": "Select payment method",
+    "processingPayment": "Processing Payment",
+    "confirmingPayment": "Confirming your payment...",
+    "loadMoreCards": "Load more",
+    "showLessCards": "Show fewer cards"
   },
   "privacy": {
     "failedToLoadPrivacyPolicyData": "Failed to load Privacy Policy Data",
@@ -1265,5 +1281,75 @@
     "checkoutHint": "Enter the code WELCOME at checkout to claim your discount",
     "codeCopied": "Promo code copied!",
     "widgetText": "Welcome Promo"
+  },
+  "autoTopup": {
+    "promptTitle": "Enable Auto Top-Up",
+    "promptDescription": "Never run out of data! When your usage reaches 80%, we'll automatically recharge with {{bundle}} ({{data}}, {{validity}}) using your saved payment method.",
+    "enableButton": "Enable Auto Top-Up",
+    "enabling": "Enabling…",
+    "enabledSuccess": "Auto top-up has been enabled!",
+    "enabledConfirmation": "Auto top-up is active for {{bundle}}. We'll recharge automatically when usage hits 80%.",
+    "enableError": "Failed to enable auto top-up. Please try again.",
+    "disableSuccess": "Auto top-up has been disabled.",
+    "disableError": "Failed to disable auto top-up.",
+    "badge": "Auto Top-Up",
+    "settingsTitle": "Auto Top-Up",
+    "settingsDescription": "Automatically recharge when data usage reaches 80%.",
+    "neverRunOutOfData": "Never run out of data",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "bundle": "Bundle",
+    "paymentMethod": "Payment Method",
+    "monthlyCap": "Monthly Spending Cap",
+    "monthlyCapHint": "Maximum auto top-up spend per month (in cents).",
+    "noPaymentMethod": "No payment method saved. Make a card payment first.",
+    "save": "Save",
+    "saving": "Saving…",
+    "savedSuccess": "Auto top-up settings saved.",
+    "confirmDisable": "Disable auto top-up for this eSIM?",
+    "confirmDisableDescription": "You can re-enable it during checkout of your next manual topup.",
+    "yes": "Yes, disable",
+    "no": "Cancel",
+    "manageButton": "Manage Auto Top-Up",
+    "setupButton": "Setup Auto Top-Up",
+    "bundleAddedAutomatically": "Bundle added automatically",
+    "packageRestrictionWarning": "When auto top-up is enabled, individual packages cannot be added. To choose a different package, please disable auto top-up first.",
+    "monthlyCapHelp": "Tip: Set to 0 for unlimited automatic renewals.",
+    "saveError": "Failed to save auto top-up settings. Please try again.",
+    "monthlyCapRequired": "Please enter a monthly spending cap (0 for unlimited).",
+    "disable": "Disable Auto Top-Up",
+    "linkedTopUpPlan": "Linked Top-Up Plan",
+    "perTopUp": "Per top-up",
+    "status": "Auto Top-up Status",
+    "active": "Active",
+    "inactive": "Inactive",
+    "triggerPoint": "Trigger Point",
+    "at80Percent": "80% consumption",
+    "saveChanges": "Save Changes",
+    "iccidSerial": "ICCID (eSim Serial#)",
+    "enableAutoTopupCheckbox": "Enable auto top-up with this bundle",
+    "autoRechargeAt80": "Auto-recharge at 80% usage",
+    "enabledSuccessfully": "Auto top-up enabled successfully!",
+    "enablementFailed": "Auto top-up could not be enabled after payment. You can try again during your next eSIM topup purchase."
+  },
+  "paymentMethods": {
+    "title": "Payment Methods",
+    "subtitle": "Manage your saved payment methods.",
+    "default": "Default",
+    "expired": "Expired",
+    "setDefault": "Set as default",
+    "delete": "Delete",
+    "noMethods": "No saved payment methods. Payment methods are saved automatically when you make a card payment.",
+    "confirmDelete": "Delete this payment method?",
+    "confirmDeleteDescription": "Are you sure you want to delete this payment method?",
+    "confirmDeleteDefaultDescription": "You cannot delete this payment method if auto top-up is enabled. Please disable auto top-up first or set a different card as default.",
+    "autoTopupRestrictionNote": "The current default payment method cannot be deleted as long as auto top-up is enabled for any of your eSIM profiles.",
+    "deleteSuccess": "Payment method deleted.",
+    "deleteError": "Failed to delete payment method.",
+    "setDefaultSuccess": "Default payment method updated.",
+    "setDefaultError": "Failed to update default payment method.",
+    "expires": "Expires",
+    "syncSuccess": "Payment methods synced from Stripe.",
+    "syncError": "Failed to sync payment methods."
   }
 }
