--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -49,6 +49,8 @@
     "view_receipt": "Ver Recibo",
     "download": "Descargar",
     "view_more": "Ver Más",
+    "view_details": "Ver detalles",
+    "details": "Detalles",
     "delete": "Eliminar",
     "add_top_up": "Añadir Recarga",
     "consumption": "Consumo",
@@ -151,7 +153,8 @@
     "accountInfo": "Información",
     "deleteAccount": "Eliminar Cuenta",
     "logout": "Cerrar Sesión",
-    "referAndEarn": "Referir y Ganar"
+    "referAndEarn": "Referir y Ganar",
+    "paymentMethods": "Métodos de pago"
   },
   "referral": {
     "discountActive": "🎉 ¡Descuento Activo!",
@@ -446,7 +449,8 @@
     "paymentConfirmationFailed": "Error al confirmar pago",
     "paymentMethod": "Método de Pago",
     "failedToLoadPaymentInputs": "Error al cargar entradas de pago. Por favor intenta más tarde",
-    "securityDisclaimer": "Los pagos se procesan de forma segura a través de Stripe.com. ChillSim no almacena los datos de tu tarjeta."
+    "securityDisclaimer": "Los pagos se procesan de forma segura a través de Stripe.com. Tu método de pago se guarda de forma segura por Stripe para uso futuro.",
+    "savePaymentNotice": "Tu método de pago se guardará de forma segura para futuras compras y recargas automáticas."
   },
   "planType": {
     "Data only": "Solo Datos"
@@ -521,9 +525,21 @@
   "payment": {
     "paymentTypeNotAvailable": "Este tipo de pago no está disponible",
     "failedToLoadPaymentInput": "Error al cargar entrada de pago",
+    "authenticationFailed": "Autenticación fallida. Por favor elige otro método de pago e inténtalo de nuevo.",
+    "failed": "Pago fallido",
     "paymentMethod": "Método de Pago",
     "walletBalance": "Billetera ({{balance}})",
-    "bundlePrice": "Precio del Plan"
+    "bundlePrice": "Precio del Plan",
+    "wallet": "Saldo de la Billetera",
+    "insufficientBalance": "Saldo insuficiente para esta compra",
+    "addNewCard": "Pagar con tarjeta nueva",
+    "payWithCard": "Pagar con tarjeta",
+    "savedPaymentMethods": "Métodos de Pago Guardados",
+    "selectPaymentMethod": "Seleccionar método de pago",
+    "processingPayment": "Procesando Pago",
+    "confirmingPayment": "Confirmando tu pago...",
+    "loadMoreCards": "Ver más tarjetas",
+    "showLessCards": "Ver menos tarjetas"
   },
   "privacy": {
     "failedToLoadPrivacyPolicyData": "Error al cargar Política de Privacidad",
@@ -1270,5 +1286,75 @@
       "title": "Oferta de Bienvenida",
       "badge": "99% DTO"
     }
+  },
+  "autoTopup": {
+    "promptTitle": "Activar Recarga Automática",
+    "promptDescription": "¡No te quedes sin datos! Cuando tu consumo alcance el 80%, recargaremos automáticamente con {{bundle}} ({{data}}, {{validity}}) usando tu método de pago guardado.",
+    "enableButton": "Activar Recarga Automática",
+    "enabling": "Activando…",
+    "enabledSuccess": "¡La recarga automática ha sido activada!",
+    "enabledConfirmation": "La recarga automática está activa para {{bundle}}. Recargaremos automáticamente cuando el consumo alcance el 80%.",
+    "enableError": "No se pudo activar la recarga automática. Por favor, inténtalo de nuevo.",
+    "disableSuccess": "La recarga automática ha sido desactivada.",
+    "disableError": "No se pudo desactivar la recarga automática.",
+    "badge": "Recarga Automática",
+    "settingsTitle": "Configuración de Recarga Automática",
+    "settingsDescription": "Recarga automáticamente cuando el consumo de datos alcance el 80%.",
+    "enabled": "Activada",
+    "disabled": "Desactivada",
+    "bundle": "Paquete",
+    "paymentMethod": "Método de Pago",
+    "monthlyCap": "Límite de Gasto Mensual",
+    "monthlyCapHint": "Gasto máximo de recarga automática por mes (en céntimos).",
+    "noPaymentMethod": "No hay método de pago guardado. Realiza primero un pago con tarjeta.",
+    "save": "Guardar",
+    "saving": "Guardando…",
+    "savedSuccess": "Configuración de recarga automática guardada.",
+    "confirmDisable": "¿Desactivar la recarga automática para esta eSIM?",
+    "confirmDisableDescription": "Puedes reactivarla durante el pago de tu próxima recarga manual.",
+    "yes": "Sí, desactivar",
+    "no": "Cancelar",
+    "manageButton": "Administrar recarga automática",
+    "setupButton": "Configurar recarga automática",
+    "bundleAddedAutomatically": "Paquete agregado automáticamente",
+    "packageRestrictionWarning": "Cuando la recarga automática está habilitada, no se pueden agregar paquetes individuales. Para elegir un paquete diferente, desactive primero la recarga automática.",
+    "monthlyCapHelp": "Consejo: Establecer en 0 para renovaciones automáticas ilimitadas.",
+    "saveError": "No se pudo guardar la configuración de recarga automática. Por favor, inténtelo de nuevo.",
+    "monthlyCapRequired": "Por favor, ingrese un límite de gasto mensual (0 para ilimitado).",
+    "disable": "Desactivar recarga automática",
+    "neverRunOutOfData": "Nunca te quedes sin datos",
+    "linkedTopUpPlan": "Plan de Recarga Vinculado",
+    "perTopUp": "Por recarga",
+    "status": "Estado de Recarga Automática",
+    "active": "Activo",
+    "inactive": "Inactivo",
+    "triggerPoint": "Punto de Activación",
+    "at80Percent": "80% de consumo",
+    "saveChanges": "Guardar Cambios",
+    "iccidSerial": "ICCID (Núm. de Serie eSim)",
+    "enableAutoTopupCheckbox": "Activar recarga automática con este paquete",
+    "autoRechargeAt80": "Recarga automática al 80% de uso",
+    "enabledSuccessfully": "¡Recarga automática activada correctamente!",
+    "enablementFailed": "No se pudo activar la recarga automática después del pago. Puedes intentarlo de nuevo durante tu próxima compra de recarga eSIM."
+  },
+  "paymentMethods": {
+    "title": "Métodos de Pago",
+    "subtitle": "Gestiona tus métodos de pago guardados.",
+    "default": "Predeterminado",
+    "expired": "Caducado",
+    "setDefault": "Establecer como predeterminado",
+    "delete": "Eliminar",
+    "noMethods": "No hay métodos de pago guardados. Los métodos de pago se guardan automáticamente cuando realizas un pago con tarjeta.",
+    "confirmDelete": "¿Eliminar este método de pago?",
+    "confirmDeleteDescription": "¿Estás seguro de que deseas eliminar este método de pago?",
+    "confirmDeleteDefaultDescription": "No puedes eliminar este método de pago si la recarga automática está activa. Desactiva la recarga automática primero o establece otra tarjeta como predeterminada.",
+    "autoTopupRestrictionNote": "El método de pago predeterminado actual no se puede eliminar mientras la recarga automática esté habilitada para cualquiera de sus perfiles eSIM.",
+    "deleteSuccess": "Método de pago eliminado.",
+    "deleteError": "No se pudo eliminar el método de pago.",
+    "setDefaultSuccess": "Método de pago predeterminado actualizado.",
+    "setDefaultError": "No se pudo actualizar el método de pago predeterminado.",
+    "expires": "Expira",
+    "syncSuccess": "Métodos de pago sincronizados desde Stripe.",
+    "syncError": "No se pudieron sincronizar los métodos de pago."
   }
 }
