--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -49,6 +49,8 @@
     "view_receipt": "Voir le Reçu",
     "download": "Télécharger",
     "view_more": "Voir Plus",
+    "view_details": "Voir les détails",
+    "details": "Détails",
     "delete": "Supprimer",
     "add_top_up": "Ajouter Recharge",
     "consumption": "Consommation",
@@ -151,7 +153,8 @@
     "accountInfo": "Informations",
     "deleteAccount": "Supprimer le Compte",
     "logout": "Déconnexion",
-    "referAndEarn": "Parrainer et Gagner"
+    "referAndEarn": "Parrainer et Gagner",
+    "paymentMethods": "Méthodes de paiement"
   },
   "referral": {
     "discountActive": "🎉 Réduction Active !",
@@ -446,7 +449,8 @@
     "paymentConfirmationFailed": "Échec de la confirmation du paiement",
     "paymentMethod": "Méthode de Paiement",
     "failedToLoadPaymentInputs": "Échec du chargement des champs de paiement. Veuillez réessayer plus tard",
-    "securityDisclaimer": "Les paiements sont traités en toute sécurité via Stripe.com. ChillSim ne stocke pas vos données bancaires."
+    "securityDisclaimer": "Les paiements sont traités en toute sécurité via Stripe.com. Votre méthode de paiement est enregistrée en toute sécurité par Stripe pour une utilisation future.",
+    "savePaymentNotice": "Votre méthode de paiement sera enregistrée en toute sécurité pour vos futurs achats et rechargements automatiques."
   },
   "planType": {
     "Data only": "Données uniquement"
@@ -521,9 +525,21 @@
   "payment": {
     "paymentTypeNotAvailable": "Ce type de paiement n'est pas disponible",
     "failedToLoadPaymentInput": "Échec du chargement du champ de paiement",
+    "authenticationFailed": "Authentification échouée. Veuillez choisir un autre moyen de paiement et réessayer.",
+    "failed": "Paiement échoué",
     "paymentMethod": "Méthode de Paiement",
     "walletBalance": "Portefeuille ({{balance}})",
-    "bundlePrice": "Prix du Forfait"
+    "bundlePrice": "Prix du Forfait",
+    "wallet": "Solde du Portefeuille",
+    "insufficientBalance": "Solde insuffisant pour cet achat",
+    "addNewCard": "Payer avec une nouvelle carte",
+    "payWithCard": "Payer avec une carte",
+    "savedPaymentMethods": "Méthodes de Paiement Sauvegardées",
+    "selectPaymentMethod": "Sélectionner la méthode de paiement",
+    "processingPayment": "Traitement du Paiement",
+    "confirmingPayment": "Confirmation de votre paiement...",
+    "loadMoreCards": "Plus de cartes",
+    "showLessCards": "Voir moins de cartes"
   },
   "privacy": {
     "failedToLoadPrivacyPolicyData": "Échec du chargement de la Politique de Confidentialité",
@@ -1270,5 +1286,75 @@
       "title": "Offre de Bienvenue",
       "badge": "99% REMISE"
     }
+  },
+  "autoTopup": {
+    "promptTitle": "Activer la Recharge Automatique",
+    "promptDescription": "Ne tombez plus jamais à court de données ! Lorsque votre consommation atteint 80%, nous rechargerons automatiquement avec {{bundle}} ({{data}}, {{validity}}) en utilisant votre moyen de paiement enregistré.",
+    "enableButton": "Activer la Recharge Automatique",
+    "enabling": "Activation en cours…",
+    "enabledSuccess": "La recharge automatique a été activée !",
+    "enabledConfirmation": "La recharge automatique est active pour {{bundle}}. Nous rechargerons automatiquement lorsque la consommation atteindra 80%.",
+    "enableError": "Impossible d'activer la recharge automatique. Veuillez réessayer.",
+    "disableSuccess": "La recharge automatique a été désactivée.",
+    "disableError": "Impossible de désactiver la recharge automatique.",
+    "badge": "Recharge Auto",
+    "settingsTitle": "Paramètres de Recharge Automatique",
+    "settingsDescription": "Rechargez automatiquement lorsque la consommation de données atteint 80%.",
+    "enabled": "Activé",
+    "disabled": "Désactivé",
+    "bundle": "Forfait",
+    "paymentMethod": "Moyen de Paiement",
+    "monthlyCap": "Plafond de Dépenses Mensuel",
+    "monthlyCapHint": "Dépenses maximales de recharge automatique par mois (en centimes).",
+    "noPaymentMethod": "Aucun moyen de paiement enregistré. Effectuez d'abord un paiement par carte.",
+    "save": "Enregistrer",
+    "saving": "Enregistrement…",
+    "savedSuccess": "Paramètres de recharge automatique enregistrés.",
+    "confirmDisable": "Désactiver la recharge automatique pour cet eSIM ?",
+    "confirmDisableDescription": "Vous pourrez la réactiver lors de la commande de votre prochaine recharge manuelle.",
+    "yes": "Oui, désactiver",
+    "no": "Annuler",
+    "manageButton": "Gérer la recharge automatique",
+    "setupButton": "Configurer la recharge automatique",
+    "bundleAddedAutomatically": "Forfait ajouté automatiquement",
+    "packageRestrictionWarning": "Lorsque la recharge automatique est activée, les forfaits individuels ne peuvent pas être ajoutés. Pour choisir un autre forfait, veuillez désactiver d'abord la recharge automatique.",
+    "monthlyCapHelp": "Conseil : Définir à 0 pour des renouvellements automatiques illimités.",
+    "saveError": "Impossible d'enregistrer les paramètres de recharge automatique. Veuillez réessayer.",
+    "monthlyCapRequired": "Veuillez entrer un plafond de dépenses mensuelles (0 pour illimité).",
+    "disable": "Désactiver la recharge automatique",
+    "neverRunOutOfData": "Ne tombez plus jamais à court de données",
+    "linkedTopUpPlan": "Forfait de Recharge Lié",
+    "perTopUp": "Par recharge",
+    "status": "Statut de Recharge Automatique",
+    "active": "Actif",
+    "inactive": "Inactif",
+    "triggerPoint": "Point de Déclenchement",
+    "at80Percent": "80% de consommation",
+    "saveChanges": "Enregistrer les Modifications",
+    "iccidSerial": "ICCID (N° de Série eSim)",
+    "enableAutoTopupCheckbox": "Activer la recharge automatique avec ce forfait",
+    "autoRechargeAt80": "Recharge automatique à 80% d'utilisation",
+    "enabledSuccessfully": "Recharge automatique activée avec succès !",
+    "enablementFailed": "La recharge automatique n'a pas pu être activée après le paiement. Vous pouvez réessayer lors de votre prochain achat de recharge eSIM."
+  },
+  "paymentMethods": {
+    "title": "Moyens de Paiement",
+    "subtitle": "Gérez vos moyens de paiement enregistrés.",
+    "default": "Par défaut",
+    "expired": "Expiré",
+    "setDefault": "Définir par défaut",
+    "delete": "Supprimer",
+    "noMethods": "Aucun moyen de paiement enregistré. Les moyens de paiement sont enregistrés automatiquement lorsque vous effectuez un paiement par carte.",
+    "confirmDelete": "Supprimer ce moyen de paiement ?",
+    "confirmDeleteDescription": "Êtes-vous sûr de vouloir supprimer ce moyen de paiement ?",
+    "confirmDeleteDefaultDescription": "Vous ne pouvez pas supprimer ce moyen de paiement si la recharge automatique est activée. Veuillez désactiver la recharge automatique d'abord ou définir une autre carte par défaut.",
+    "autoTopupRestrictionNote": "Le moyen de paiement par défaut actuel ne peut pas être supprimé tant que le rechargement automatique est activé pour l'un de vos profils eSIM.",
+    "deleteSuccess": "Moyen de paiement supprimé.",
+    "deleteError": "Impossible de supprimer le moyen de paiement.",
+    "setDefaultSuccess": "Moyen de paiement par défaut mis à jour.",
+    "setDefaultError": "Impossible de mettre à jour le moyen de paiement par défaut.",
+    "expires": "Expire",
+    "syncSuccess": "Moyens de paiement synchronisés depuis Stripe.",
+    "syncError": "Impossible de synchroniser les moyens de paiement."
   }
 }
