--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -49,6 +49,8 @@
     "view_receipt": "रसीद देखें",
     "download": "डाउनलोड करें",
     "view_more": "और देखें",
+    "view_details": "विवरण देखें",
+    "details": "विवरण",
     "delete": "हटाएं",
     "add_top_up": "टॉप-अप जोड़ें",
     "consumption": "उपयोग",
@@ -151,7 +153,8 @@
     "accountInfo": "खाता जानकारी",
     "deleteAccount": "खाता हटाएं",
     "logout": "लॉग आउट",
-    "referAndEarn": "रेफर करें और कमाएं"
+    "referAndEarn": "रेफर करें और कमाएं",
+    "paymentMethods": "भुगतान विधियां"
   },
   "referral": {
     "discountActive": "🎉 रेफरल छूट सक्रिय!",
@@ -446,7 +449,8 @@
     "paymentConfirmationFailed": "भुगतान पुष्टि विफल",
     "paymentMethod": "भुगतान विधि",
     "failedToLoadPaymentInputs": "भुगतान इनपुट लोड करने में विफल। कृपया बाद में फिर प्रयास करें",
-    "securityDisclaimer": "भुगतान Stripe.com के माध्यम से सुरक्षित रूप से प्रोसेस किए जाते हैं। ChillSim आपके कार्ड विवरण स्टोर नहीं करता।"
+    "securityDisclaimer": "भुगतान Stripe.com के माध्यम से सुरक्षित रूप से प्रोसेस किए जाते हैं। आपकी भुगतान विधि भविष्य के उपयोग के लिए Stripe द्वारा सुरक्षित रूप से सहेजी जाती है।",
+    "savePaymentNotice": "आपकी भुगतान विधि भविष्य की खरीदारी और स्वचालित टॉप-अप के लिए सुरक्षित रूप से सहेजी जाएगी।"
   },
   "planType": {
     "Data only": "केवल डेटा"
@@ -521,9 +525,21 @@
   "payment": {
     "paymentTypeNotAvailable": "यह भुगतान प्रकार अभी उपलब्ध नहीं है",
     "failedToLoadPaymentInput": "भुगतान इनपुट लोड करने में विफल",
+    "authenticationFailed": "प्रमाणीकरण विफल। कृपया कोई अन्य भुगतान विधि चुनें और पुनः प्रयास करें।",
+    "failed": "भुगतान विफल",
     "paymentMethod": "भुगतान विधि",
     "walletBalance": "वॉलेट ({{balance}})",
-    "bundlePrice": "बंडल मूल्य"
+    "bundlePrice": "बंडल मूल्य",
+    "wallet": "वॉलेट बैलेंस",
+    "insufficientBalance": "इस खरीद के लिए अपर्याप्त बैलेंस",
+    "addNewCard": "नए कार्ड से भुगतान करें",
+    "payWithCard": "कार्ड से भुगतान करें",
+    "savedPaymentMethods": "सहेजे गए भुगतान तरीके",
+    "selectPaymentMethod": "भुगतान विधि चुनें",
+    "processingPayment": "भुगतान प्रक्रिया में है",
+    "confirmingPayment": "आपके भुगतान की पुष्टि हो रही है...",
+    "loadMoreCards": "और कार्ड दिखाएं",
+    "showLessCards": "कम कार्ड दिखाएं"
   },
   "privacy": {
     "failedToLoadPrivacyPolicyData": "गोपनीयता नीति डेटा लोड करने में विफल",
@@ -1270,5 +1286,75 @@
       "title": "स्वागत ऑफर",
       "badge": "99% छूट"
     }
+  },
+  "autoTopup": {
+    "promptTitle": "ऑटो टॉप-अप सक्षम करें",
+    "promptDescription": "कभी डेटा खत्म न होने दें! जब आपकी खपत 80% तक पहुँचती है, तो हम आपकी सहेजी गई भुगतान विधि का उपयोग करके स्वचालित रूप से {{bundle}} ({{data}}, {{validity}}) से रिचार्ज करेंगे।",
+    "enableButton": "ऑटो टॉप-अप सक्षम करें",
+    "enabling": "सक्षम किया जा रहा है…",
+    "enabledSuccess": "ऑटो टॉप-अप सक्षम हो गया!",
+    "enabledConfirmation": "{{bundle}} के लिए ऑटो टॉप-अप सक्रिय है। खपत 80% तक पहुँचने पर हम स्वचालित रूप से रिचार्ज करेंगे।",
+    "enableError": "ऑटो टॉप-अप सक्षम करने में विफल। कृपया पुनः प्रयास करें।",
+    "disableSuccess": "ऑटो टॉप-अप अक्षम कर दिया गया है।",
+    "disableError": "ऑटो टॉप-अप अक्षम करने में विफल।",
+    "badge": "ऑटो टॉप-अप",
+    "settingsTitle": "ऑटो टॉप-अप सेटिंग्स",
+    "settingsDescription": "डेटा उपयोग 80% तक पहुँचने पर स्वचालित रूप से रिचार्ज करें।",
+    "enabled": "सक्षम",
+    "disabled": "अक्षम",
+    "bundle": "बंडल",
+    "paymentMethod": "भुगतान विधि",
+    "monthlyCap": "मासिक खर्च सीमा",
+    "monthlyCapHint": "प्रति माह अधिकतम ऑटो टॉप-अप खर्च (सेंट में)।",
+    "noPaymentMethod": "कोई भुगतान विधि सहेजी नहीं गई। पहले कार्ड से भुगतान करें।",
+    "save": "सहेजें",
+    "saving": "सहेजा जा रहा है…",
+    "savedSuccess": "ऑटो टॉप-अप सेटिंग्स सहेजी गईं।",
+    "confirmDisable": "इस eSIM के लिए ऑटो टॉप-अप अक्षम करें?",
+    "confirmDisableDescription": "आप इसे अपनी अगली मैनुअल टॉप-अप के चेकआउट के दौरान फिर से सक्षम कर सकते हैं।",
+    "yes": "हाँ, अक्षम करें",
+    "no": "रद्द करें",
+    "manageButton": "ऑटो टॉप-अप प्रबंधित करें",
+    "setupButton": "ऑटो टॉप-अप सेटअप करें",
+    "bundleAddedAutomatically": "पैकेज स्वचालित रूप से जोड़ा गया",
+    "packageRestrictionWarning": "जब ऑटो टॉप-अप सक्षम होता है, तो व्यक्तिगत पैकेज जोड़े नहीं जा सकते। एक अलग पैकेज चुनने के लिए, कृपया पहले ऑटो टॉप-अप अक्षम करें।",
+    "monthlyCapHelp": "सुझाव: असीमित स्वचालित नवीनीकरण के लिए 0 पर सेट करें।",
+    "saveError": "ऑटो टॉप-अप सेटिंग्स सहेजने में विफल। कृपया पुनः प्रयास करें।",
+    "monthlyCapRequired": "कृपया मासिक खर्च सीमा दर्ज करें (असीमित के लिए 0)।",
+    "disable": "ऑटो टॉप-अप अक्षम करें",
+    "neverRunOutOfData": "कभी डेटा खत्म न होने दें",
+    "linkedTopUpPlan": "जुड़ी हुई टॉप-अप योजना",
+    "perTopUp": "प्रति टॉप-अप",
+    "status": "ऑटो टॉप-अप स्थिति",
+    "active": "सक्रिय",
+    "inactive": "निष्क्रिय",
+    "triggerPoint": "ट्रिगर बिंदु",
+    "at80Percent": "80% खपत",
+    "saveChanges": "परिवर्तन सहेजें",
+    "iccidSerial": "ICCID (eSim क्रम संख्या)",
+    "enableAutoTopupCheckbox": "इस बंडल के साथ ऑटो टॉप-अप सक्षम करें",
+    "autoRechargeAt80": "80% उपयोग पर ऑटो-रीचार्ज",
+    "enabledSuccessfully": "ऑटो टॉप-अप सफलतापूर्वक सक्षम किया गया!",
+    "enablementFailed": "भुगतान के बाद ऑटो टॉप-अप सक्षम नहीं किया जा सका। आप अपनी अगली eSIM टॉप-अप खरीद के दौरान पुनः प्रयास कर सकते हैं।"
+  },
+  "paymentMethods": {
+    "title": "भुगतान विधियाँ",
+    "subtitle": "अपनी सहेजी गई भुगतान विधियों को प्रबंधित करें।",
+    "default": "डिफ़ॉल्ट",
+    "expired": "समाप्त हो गया",
+    "setDefault": "डिफ़ॉल्ट के रूप में सेट करें",
+    "delete": "हटाएँ",
+    "noMethods": "कोई सहेजी गई भुगतान विधि नहीं। कार्ड से भुगतान करने पर भुगतान विधियाँ स्वचालित रूप से सहेजी जाती हैं।",
+    "confirmDelete": "इस भुगतान विधि को हटाएँ?",
+    "confirmDeleteDescription": "क्या आप वाकई इस भुगतान विधि को हटाना चाहते हैं?",
+    "confirmDeleteDefaultDescription": "यदि ऑटो टॉप-अप सक्षम है तो आप इस भुगतान विधि को हटा नहीं सकते। कृपया पहले ऑटो टॉप-अप अक्षम करें या कोई अन्य कार्ड डिफ़ॉल्ट के रूप में सेट करें।",
+    "autoTopupRestrictionNote": "आपकी किसी भी eSIM प्रोफ़ाइल के लिए ऑटो टॉप-अप सक्षम होने तक वर्तमान डिफ़ॉल्ट भुगतान विधि को हटाया नहीं जा सकता।",
+    "deleteSuccess": "भुगतान विधि हटा दी गई।",
+    "deleteError": "भुगतान विधि हटाने में विफल।",
+    "setDefaultSuccess": "डिफ़ॉल्ट भुगतान विधि अपडेट की गई।",
+    "setDefaultError": "डिफ़ॉल्ट भुगतान विधि अपडेट करने में विफल।",
+    "expires": "समाप्ति",
+    "syncSuccess": "भुगतान विधियाँ Stripe से सिंक की गईं।",
+    "syncError": "भुगतान विधियाँ सिंक करने में विफल।"
   }
 }
