--- a/public/locales/ro/translation.json
+++ b/public/locales/ro/translation.json
@@ -49,6 +49,8 @@
     "view_receipt": "Vezi chitanța",
     "download": "Descarcă",
     "view_more": "Afișează mai mult",
+    "view_details": "Vezi detalii",
+    "details": "Detalii",
     "delete": "Șterge",
     "add_top_up": "Adaugă credit",
     "consumption": "Consum de date",
@@ -151,7 +153,8 @@
     "accountInfo": "Detalii cont",
     "deleteAccount": "Ștergere cont",
     "logout": "Deconectare",
-    "referAndEarn": "Recomandă & Câștigă"
+    "referAndEarn": "Recomandă & Câștigă",
+    "paymentMethods": "Metode de plată"
   },
   "referral": {
     "discountActive": "🎉 Reducere de Recomandare Activă!",
@@ -441,7 +444,8 @@
     "paymentConfirmationFailed": "Nu s-a putut confirma plata",
     "paymentMethod": "Metodă de plată",
     "failedToLoadPaymentInputs": "Încărcarea datelor de plată a eșuat. Te rugăm să încerci din nou mai târziu",
-    "securityDisclaimer": "Plățile sunt procesate în siguranță prin Stripe.com. ChillSim nu stochează datele cardului dvs."
+    "securityDisclaimer": "Plățile sunt procesate în siguranță prin Stripe.com. Metoda ta de plată este salvată în siguranță de Stripe pentru utilizare viitoare.",
+    "savePaymentNotice": "Metoda ta de plată va fi salvată în siguranță pentru achiziții viitoare și reîncărcări automate."
   },
   "planType": {
     "Data only": "Doar date"
@@ -516,9 +520,21 @@
   "payment": {
     "paymentTypeNotAvailable": "Acest tip de plată nu este disponibil momentan",
     "failedToLoadPaymentInput": "Nu s-a putut încărca formularul de plată",
+    "authenticationFailed": "Autentificare eșuată. Te rugăm să alegi o altă metodă de plată și să încerci din nou.",
+    "failed": "Plata a eșuat",
     "paymentMethod": "Metodă de plată",
     "walletBalance": "Portofel ({{balance}})",
-    "bundlePrice": "Prețul pachetului"
+    "bundlePrice": "Prețul pachetului",
+    "wallet": "Balanța portofelului",
+    "insufficientBalance": "Sold insuficient pentru această achiziție",
+    "addNewCard": "Plătește cu un card nou",
+    "payWithCard": "Plătește cu cardul",
+    "savedPaymentMethods": "Metode de plată salvate",
+    "selectPaymentMethod": "Selectează metoda de plată",
+    "processingPayment": "Plată în curs de procesare",
+    "confirmingPayment": "Se confirmă plata...",
+    "loadMoreCards": "Arată mai multe",
+    "showLessCards": "Arată mai puține carduri"
   },
   "privacy": {
     "failedToLoadPrivacyPolicyData": "Nu s-au putut încărca informațiile Politicii de confidențialitate",
@@ -1253,5 +1269,75 @@
     "checkoutHint": "Introdu codul WELCOME la checkout pentru a beneficia de reducere",
     "codeCopied": "Codul promoțional a fost copiat!",
     "widgetText": "Promoție de Bun Venit"
+  },
+  "autoTopup": {
+    "promptTitle": "Activează Reîncărcarea Automată",
+    "promptDescription": "Nu rămâne niciodată fără date! Când consumul tău atinge 80%, vom reîncărca automat cu {{bundle}} ({{data}}, {{validity}}) folosind metoda ta de plată salvată.",
+    "enableButton": "Activează Reîncărcarea Automată",
+    "enabling": "Se activează…",
+    "enabledSuccess": "Reîncărcarea automată a fost activată!",
+    "enabledConfirmation": "Reîncărcarea automată este activă pentru {{bundle}}. Vom reîncărca automat când consumul atinge 80%.",
+    "enableError": "Nu s-a putut activa reîncărcarea automată. Te rugăm să încerci din nou.",
+    "disableSuccess": "Reîncărcarea automată a fost dezactivată.",
+    "disableError": "Nu s-a putut dezactiva reîncărcarea automată.",
+    "badge": "Reîncărcare Automată",
+    "settingsTitle": "Setări Reîncărcare Automată",
+    "settingsDescription": "Reîncarcă automat când consumul de date atinge 80%.",
+    "enabled": "Activat",
+    "disabled": "Dezactivat",
+    "bundle": "Pachet",
+    "paymentMethod": "Metodă de Plată",
+    "monthlyCap": "Limită Lunară de Cheltuieli",
+    "monthlyCapHint": "Cheltuieli maxime pentru reîncărcare automată pe lună (în cenți).",
+    "noPaymentMethod": "Nicio metodă de plată salvată. Efectuează mai întâi o plată cu cardul.",
+    "save": "Salvează",
+    "saving": "Se salvează…",
+    "savedSuccess": "Setările de reîncărcare automată au fost salvate.",
+    "confirmDisable": "Dezactivezi reîncărcarea automată pentru acest eSIM?",
+    "confirmDisableDescription": "O poți reactiva în timpul comenzii următoarei reîncărcare manuale.",
+    "yes": "Da, dezactivează",
+    "no": "Anulează",
+    "manageButton": "Gestionează Reîncărcare Automată",
+    "setupButton": "Configurează Reîncărcare Automată",
+    "bundleAddedAutomatically": "Pachet adăugat automat",
+    "packageRestrictionWarning": "Când reîncărcarea automată este activată, pachetele individuale nu pot fi adăugate. Pentru a alege un alt pachet, te rugăm să dezactivezi mai întâi reîncărcarea automată.",
+    "monthlyCapHelp": "Sfat: Setează la 0 pentru reînnoiri automate nelimitate.",
+    "saveError": "Nu s-au putut salva setările de reîncărcare automată. Te rugăm să încerci din nou.",
+    "monthlyCapRequired": "Te rugăm să introduci o limită lunară de cheltuieli (0 pentru nelimitat).",
+    "disable": "Dezactivează Reîncărcarea Automată",
+    "neverRunOutOfData": "Rămâi conectat",
+    "linkedTopUpPlan": "Plan de Reîncărcare Asociat",
+    "perTopUp": "Pe reîncărcare",
+    "status": "Stare Reîncărcare Automată",
+    "active": "Activ",
+    "inactive": "Inactiv",
+    "triggerPoint": "Punct de Declanșare",
+    "at80Percent": "80% consum",
+    "saveChanges": "Salvează Modificările",
+    "iccidSerial": "ICCID (Nr. Serial eSim)",
+    "enableAutoTopupCheckbox": "Activează reîncărcarea automată",
+    "autoRechargeAt80": "Auto-reîncărcare la 80% utilizare",
+    "enabledSuccessfully": "Reîncărcare automată activată cu succes!",
+    "enablementFailed": "Reîncărcarea automată nu a putut fi activată după plată. Poți încerca din nou în timpul următoarei achiziții de reîncărcare eSIM."
+  },
+  "paymentMethods": {
+    "title": "Metode de Plată",
+    "subtitle": "Administrează metodele tale de plată salvate.",
+    "default": "Implicit",
+    "expired": "Expirată",
+    "setDefault": "Setează ca implicită",
+    "delete": "Șterge",
+    "noMethods": "Nicio metodă de plată salvată. Metodele de plată sunt salvate automat când efectuezi o plată cu cardul.",
+    "confirmDelete": "Ștergi această metodă de plată?",
+    "confirmDeleteDescription": "Ești sigur că vrei să ștergi această metodă de plată?",
+    "confirmDeleteDefaultDescription": "Nu poți șterge această metodă de plată dacă reîncărcarea automată este activată. Te rugăm să dezactivezi reîncărcarea automată mai întâi sau să seteți alt card ca implicit.",
+    "autoTopupRestrictionNote": "Metoda de plată implicită curentă nu poate fi ștearsă atâta timp cât reîncărcarea automată este activată pentru oricare dintre profilurile dvs. eSIM.",
+    "deleteSuccess": "Metoda de plată a fost ștearsă.",
+    "deleteError": "Nu s-a putut șterge metoda de plată.",
+    "setDefaultSuccess": "Metoda de plată implicită a fost actualizată.",
+    "setDefaultError": "Nu s-a putut actualiza metoda de plată implicită.",
+    "expires": "Expiră",
+    "syncSuccess": "Metodele de plată au fost sincronizate din Stripe.",
+    "syncError": "Nu s-au putut sincroniza metodele de plată."
   }
 }
